--- a/index.html
+++ b/index.html
@@ -51,7 +51,19 @@
       text-align: center;
       font-size: 0.9rem;
       opacity: 0.85;
+      margin-bottom: 0.5rem;
+      color: var(--white);
+    }
+
+    .branding {
+      text-align: center;
+      font-size: 0.85rem;
       margin-bottom: 1.75rem;
+      opacity: 0.9;
+      color: var(--white);
+    }
+
+    .branding strong {
       color: var(--white);
     }
 
@@ -163,6 +175,7 @@
   <main class="card">
     <h1>My IP</h1>
     <p class="subtitle">Your public IP and connection details</p>
+    <p class="branding">A <strong>Layer Eight IT</strong> Tool</p>
 
     <div class="box">
       <div class="label">Public IP</div>
